--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,6 +16,13 @@ body {
 @media print {
   body * {
     visibility: hidden;
+    margin: 0;
+    background: white;
+  }
+
+  @page {
+    size: A4;
+    margin: 0;
   }
 
   #cv-content,
